--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -24,8 +24,10 @@
   cursor: pointer;
   list-style: none;
   transition: all 0.5s ease-in-out;
-  padding: 20px 30px 0;
+  padding: 20px 30px 0 24px;
   margin: 0 5px;
+  font-size: var(--body-font-size-s);
+  font-weight: 600;
 }
 
 .accordion details summary::after {
@@ -48,6 +50,10 @@
 .accordion details[open] {
   border-bottom: 1px solid;
   border-radius: 5px;
+
+  a:any-link {
+    color: var(--text-color-light);
+    }
 }
 
 .accordion details[open] summary,
@@ -109,7 +115,6 @@
 
 .accordion details p {
   margin: 0 0 0.8em 0;
-  font-weight: 600;
 }
 
 .accordion details[open],
@@ -129,6 +134,11 @@
 }
 
 .dark-scheme {
+
+  .accordion details[open] a:any-link {
+    color: var(--text-color);
+
+  }
   
   .accordion details[open], .accordion details[open] summary {
     background: var(--white);
@@ -147,10 +157,12 @@
 
   .accordion details summary {
     color: var(--text-color-light);
+    font-weight: 400;
 
     > p > strong {
       font-weight: 400;
     }
+
   }
   
   .accordion details[open] summary::after {
