--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -43,8 +43,8 @@
 }
 
 .banner-heading {
-  padding-left: var(--spacing-s);
-  margin-top: var(--spacing-xl);
+  padding: var(--spacing-s) var(--spacing-xxl);
+  margin-top: var(--spacing-xxl);
 }
 
 .banner-heading h2 {
@@ -60,7 +60,7 @@
 }
 
 .banner-bottom-text-content {
-  font-size: 13px;
+  font-size: var(--body-font-size-s);
   line-height: 1.6;
   margin: 0;
   color: var(--background-color);
@@ -98,11 +98,12 @@
 
   .banner-heading {
     max-width: 500px;
-    margin-top: 0;
+    padding-top: 0;
+    margin-top: var(--spacing-l);
   }
 
   .banner-bottom-text {
-    font-size: 14px;
+    font-size: var(--body-font-size-xs);
     max-width: 500px;
   }
 
@@ -157,6 +158,7 @@
 
 .banner-heading {
   max-width: 500px;
+  margin-top: 0;
 }
 
 .banner-heading h2 {
