--- a/blocks/cc-hero-slider/cc-hero-slider.css
+++ b/blocks/cc-hero-slider/cc-hero-slider.css
@@ -80,14 +80,12 @@ main>div.section > .cc-hero-slider-wrapper {
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  max-width: 90%;
   padding: 80px 20px 30px;
 }
 
 .cc-hero-slider-content h2 {
   color: var(--white);
-  font-family: var(--heading-font-family);
-  font-size: 28px;
+  font-size: var(--heading-font-size-xl);
   font-weight: 700;
   line-height: 1.2;
   margin: 0 0 16px;
@@ -95,12 +93,9 @@ main>div.section > .cc-hero-slider-wrapper {
   text-align: center;
 }
 
-.cc-hero-slider-content h3 {
+.cc-hero-slider-item .cc-hero-slider-content h3 {
   color: var(--white);
-  font-family: var(--body-font-family);
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.5;
+  font-size: var(--body-font-size-l);
   margin: 0 0 24px;
   text-shadow: 0 1px 3px rgba(0 0 0 / 30%);
   text-align: center;
@@ -116,8 +111,8 @@ main>div.section > .cc-hero-slider-wrapper {
   gap: 8px;
   background: var(--white);
   color: var(--text-color);
-  font-family: var(--body-font-family);
-  font-size: 16px;
+  
+  font-size: var(--body-font-size-m);
   font-weight: 700;
   padding: 10px 20px;
   border-radius: 30px;
@@ -203,24 +198,30 @@ main>div.section > .cc-hero-slider-wrapper {
     align-items: flex-start;
     justify-content: center;
     max-width: 500px;
-    padding: 200px 80px 40px 40px;
+    padding: 200px 80px 0 40px;
     margin-right: 5%;
   }
 
   .cc-hero-slider-content h2 {
-    font-size: 42px;
+    font-size: var(--heading-font-size-xl);
     text-align: left;
   }
 
   .cc-hero-slider-content h3 {
-    font-size: 18px;
+    font-size: var(--body-font-size-m);
     text-align: left;
   }
 
   .cc-hero-slider-content a {
-    font-size: 16px;
+    font-size: var(--body-font-size-s);
     padding: 14px 40px;
   }
+
+
+  .cc-hero-slider-item .cc-hero-slider-content h3 {
+    text-align: left;
+    font-size: var(--heading-font-size-xs);
+}
 }
 
 /* ================================
@@ -238,12 +239,12 @@ main>div.section > .cc-hero-slider-wrapper {
   }
 
   .cc-hero-slider-content h2 {
-    font-size: 48px;
+    font-size: var(--heading-font-size-xxl);
     margin-bottom: 20px;
   }
 
   .cc-hero-slider-content h3 {
-    font-size: 20px;
+    font-size: var(--body-font-size-l);
     margin-bottom: 32px;
   }
 }
