--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -45,7 +45,7 @@
 
 .columns.block.feature-cards div div p{
     color: var(--text-color);
-    font-size: 14px;
+    font-size: var(--body-font-size-xs);
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
@@ -75,7 +75,7 @@
 
 .columns.block.feature-cards div div p{
     color: var(--text-color);
-    font-size: 14px;
+    font-size: var(--body-font-size-xs);
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
