--- a/blocks/header/mob-header.css
+++ b/blocks/header/mob-header.css
@@ -26,7 +26,7 @@
 
   #cust-service {
     grid-area: cust-service;
-    font-size: 14px;
+    font-size: var(--body-font-size-s);
     font-weight: 500;
     text-align: center;
     color: rgb(53, 53, 53) !important;
@@ -68,7 +68,7 @@
 
   #nav>div.section.nav-sections>div.default-content-wrapper>ul>li:nth-child(3)>div>div.fragment-wrapper>div>div.default-content-wrapper>ul>li>a {
     color: var(--dark-red-color);
-    font-size: 14px;
+    font-size: var(--body-font-size-s);
     font-weight: 700;
     padding: 0;
     background: transparent;
@@ -112,7 +112,7 @@
     padding: 9px 10px 9px 23px;
     width: 100%;
     color: #3a3a3a;
-    font-size: 16px;
+    font-size: var(--body-font-size-m);
     font-weight: 400;
     line-height: normal;
     box-sizing: border-box;
@@ -227,7 +227,7 @@
     display: block;
     background: #f3f3f3;
     border-bottom: 1px solid #d8d8d8;
-    font-size: 14px;
+    font-size: var(--body-font-size-s);
     border-radius: 0;
     height: unset;
     pointer-events: none;
@@ -279,7 +279,7 @@
     background: transparent;
     display: block;
     color: #353535;
-    font-size: 16px;
+    font-size: var(--body-font-size-m);
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -289,7 +289,7 @@
 
   .header nav .nav-sections .default-content-wrapper .dropdown-content .link {
     color: #801c1e;
-    font-size: 12px;
+    font-size: var(--body-font-size-xs);
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -315,7 +315,7 @@
     padding: 20px 15px;
     position: relative;
     border-bottom: 1px solid #d8d8d8;
-    font-size: 14px;
+    font-size: var(--body-font-size-s);
     margin: 0;
     pointer-events: none;
   }
@@ -357,7 +357,7 @@
   .header nav .nav-sections .default-content-wrapper .nav-drop>ul>li>a {
     color: #222;
     padding: 0 25px 20px 25px;
-    font-size: 14px;
+    font-size: var(--body-font-size-s);
   }
 
   header nav .nav-sections .default-content-wrapper .tab-pane .top-nav-left>li>a::after {
@@ -402,7 +402,7 @@
     padding: 8px 16px;
     font-weight: 500;
     height: 36px;
-    font-size: 14px;
+    font-size: var(--body-font-size-s);
     color: #fff !important;
     background-color: #902a2c;
     border-radius: 25px;
