--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -100,7 +100,7 @@
 .hero-heritage-cc-header-cta a.button.primary {
   background: var(--dark-red-color);
   padding: 14px 40px;
-  font-size: 16px;
+  font-size: var(--body-font-size-m);
   font-weight: 700;
   border: none;
   color: #fff;
@@ -112,7 +112,7 @@
   gap: 6px;
   color: var(--text-color);
   text-decoration: none;
-  font-size: 14px;
+  font-size: var(--body-font-size-s);
   white-space: nowrap;
   min-height: 16px;
 }
@@ -120,7 +120,7 @@
 .hero-heritage-cc-header-cta .hero-heritage-cc-header-cta-fees-link {
   color: rgb(136 128 122);
   text-decoration: underline;
-  font-size: 16px;
+  font-size: var(--body-font-size-m);
   margin-left: 20px;
   font-weight: 700;
   line-height: normal;
@@ -426,12 +426,9 @@
 
 .hero-heritage-cc-banner-cta a.button {
   color: #000;
-  font-size: 20px;
+  font-size: var(--body-font-size-m);
   font-weight: 500;
-  line-height: 36px;
-  /* stylelint-disable-next-line property-no-vendor-prefix */
-  -webkit-text-decoration-line: underline;
-  text-decoration-line: underline;
+  text-decoration: underline;
 }
 
 .hero-heritage-cc-banner-cta {
@@ -441,7 +438,7 @@
 .hero-heritage-cc-banner-cta a.button.primary {
   background: linear-gradient(270deg, #332B28 0%, #514A44 21.11%, #8B837D 50.14%, #625A50 71.74%, #7A766D 90.18%, #433C32 100%);
   padding: 11px 20px;
-  font-size: 14px;
+  font-size: var(--body-font-size-s);
   border: none;
   text-decoration: none;
 
@@ -456,13 +453,14 @@
   gap: 8px;
 }
 
-.hero-heritage-cc h1,
+.hero-heritage-cc h1 {
+  color: var(--text-color-hero-heritage-cc);
+  font-size: var(--body-font-size-l);
+}
+
 .hero-heritage-cc h2 {
   color: var(--text-color-hero-heritage-cc);
-  font-size: 34px;
-  font-weight: 700;
-  line-height: 1.1;
-  margin: 10px 0 0;
+  font-size: var(--heading-font-size-xs);
 }
 
 .hero-heritage-cc h3,
@@ -470,7 +468,7 @@
 .hero-heritage-cc h5,
 .hero-heritage-cc h6 {
   color: var(--text-color-hero-heritage-cc);
-  font-size: 22px;
+  font-size: var(--heading-font-size-xs);
   font-weight: 700;
   line-height: 1.1;
   margin-bottom: 24px;
@@ -487,7 +485,7 @@
 
 .hero-heritage-cc .hero-heritage-cc-intro-text-top h2,
 .hero-heritage-cc .hero-heritage-cc-intro-credit-card-name h2 {
-  font-size: 34px;
+  font-size: var(--heading-font-size-l);
   font-weight: 700;
   line-height: 1.1;
   margin: 0;
@@ -495,7 +493,7 @@
 
 .hero-heritage-cc p {
   color: var(--text-color-hero-heritage-cc);
-  font-size: 14px;
+  font-size: var(--body-font-size-s);
   line-height: 1.4;
   margin: 0;
 }
@@ -560,7 +558,7 @@
   }
 
   .hero-heritage-cc p {
-    font-size: 16px;
+    font-size: var(--body-font-size-m);
   }
 }
 
