--- a/blocks/overview/overview.css
+++ b/blocks/overview/overview.css
@@ -15,7 +15,7 @@
 .overview .overview-para,
 .overview .overview-hiddenPara {
   color: var(--text-color);
-  font-size: 14px;
+  font-size: var(--body-font-size-s);
   font-weight: 400;
   line-height: 24px;
   letter-spacing: -0.5px;
@@ -27,7 +27,7 @@
 
 .overview .overview-readMore {
   margin-top: 1rem;
-  font-size: 14px;
+  font-size: var(--body-font-size-s);
   font-weight: 600;
   color: #54565b;
   cursor: pointer;
