--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -19,7 +19,7 @@
   margin: 0;
   background-color: var(--light-color);
   color: #08133C;
-  font-size: 16px;
+  font-size: var(--body-font-size-m);
   font-weight: 400;
   text-align: initial;
   text-overflow: unset;
@@ -82,7 +82,7 @@
 
 @media (width >= 900px) {
   .tabs .tabs-list .tabs-tab {
-    font-size: 18px;
+    font-size: var(--body-font-size-m);
   }
 
   .tabs.silver-blue-text .tabs-list {
