--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,8 +1,65 @@
 /* stylelint-disable max-line-length */
+/* Individual Inter fonts are only 17k, total 119k */
 
-/* Inter Variable Font - supports font-weight range 100-900 */
 @font-face {
-  font-family: Inter;
+  font-family: 'Inter'; /* aka Inter-Light */
+  src: url('../fonts/inter-v8-latin-300.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter'; /* aka Inter-Regular */
+  src: url('../fonts/inter-v8-latin-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter'; /* aka Inter-Medium */
+  src: url('../fonts/inter-v8-latin-500.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter'; /* aka Inter SemiBold */
+  src: url('../fonts/inter-v12-latin-600.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter'; /* aka Inter-Bold */
+  src: url('../fonts/inter-v8-latin-700.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter'; /* aka Inter28pt-ExtraBold */
+  src: url('../fonts/inter-v8-latin-800.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter'; /* aka Inter28pt-Black */
+  src: url('../fonts/inter-v8-latin-900.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Inter Variable Font - supports font-weight range 100-900 but is 344k */
+@font-face {
+  font-family: Intervariable;
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
@@ -10,8 +67,9 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* italic version is 379k */
 @font-face {
-  font-family: Inter;
+  font-family: Intervariable;
   font-style: italic;
   font-weight: 100 900;
   font-display: swap;
