--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,13 @@
  */
  /* stylelint-disable selector-class-pattern */
 
+ /* fallback fonts */
+    @font-face {
+      font-family: "inter-fallback";
+      size-adjust: 106.001%;
+      src: local("Arial");
+    }
+
 :root {
   /* colors */
   --background-color: white;
@@ -22,6 +29,7 @@
   --link-hover-color: #1d3ecf;
   --purple-color: #563b80;
   --dark-red-color: #9c1d26;
+  --footer-red-color: #9d1d27;
   --dark-red-link-color:#801c1e;
   --red-color: #d13d3f;
   --red-800: #6e0a0f;
@@ -31,9 +39,9 @@
   --gray-btn-dark: #4b4b4b;
   --gradient-translucent: linear-gradient(180deg, rgba(255, 255, 255, 0.32) 0%, rgba(255, 255, 255, 0.24) 100%);
   --gradient-pearl: linear-gradient(73deg, #C7C6C6 -74.4%, #F1F1F1 23.15%);
-  --gradient-upi-steps-red: linear-gradient(165deg, #ca0919 0%, #8C2034 40%, #732C53 80%, #513873 100%);
-  --gradient-tabs-upi-link-red: radial-gradient(at top left, #AC2A34 0%, #661E2A 50%, #140F23 100%);
-  --gradient-important-documents: linear-gradient(to bottom, #C5767D, #9E1E29);
+  --gradient-red-purple: linear-gradient(165deg, #D94751 0%, #8C2034 40%, #732C53 80%, #513873 100%);
+  --gradient-red-black: radial-gradient(at top left, #AC2A34 0%, #661E2A 50%, #140F23 100%);
+  --gradient-pink-red: linear-gradient(to bottom, #C5767D, #9E1E29);
   --gradient-earn-rewards: radial-gradient(231% 135.8% at 0.9% 2.98%, #FFF6 0%, #FFF0 100%);
   --gradient-red: linear-gradient(92deg, #5D2227 36.27%, #982B35 70.68%, #5D2227 85.89%);
   --gradient-light-red: linear-gradient(97.67deg, rgba(55, 10, 14, 0.8) 6.64%, rgba(157, 29, 39, 0.8) 90.39%);
@@ -65,6 +73,7 @@
   --gray-light: #f9f9f9;
   --gray-200: #eee; /* #e9e9e9 */
   --gray-300: #dbdbde;
+  --gray-900: #222;
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #007bff;
@@ -77,23 +86,24 @@
   --dark: #343a40;
 
   /* fonts */
-  --body-font-family: 'Inter', sans-serif;
-  --heading-font-family: 'Inter', sans-serif;
+  --body-font-family: 'Inter', 'inter-fallback', sans-serif;
+  --heading-font-family: var(--body-font-family);
 
-  /* body sizes */
-  --body-font-size-l: 22px;
-  --body-font-size-m: 19px;
-  --body-font-size-s: 16px;
-  --body-font-size-xs: 14px;
-  --body-font-size-xxs: 12px;
+  /* body sizes, px values assumes 16px base font size */
+  --body-font-size-xl: 1.25rem; /* 20px */
+  --body-font-size-l: 1.125rem; /* 18px */
+  --body-font-size-m: 1rem; /* 16px */
+  --body-font-size-s: 0.875rem; /* 14px */
+  --body-font-size-xs: 0.75rem; /* 12px */
+  --body-font-size-xxs: 0.625rem; /* 10px */
 
   /* heading sizes */
-  --heading-font-size-xxl: 55px;
-  --heading-font-size-xl: 44px;
-  --heading-font-size-l: 34px;
-  --heading-font-size-m: 27px;
-  --heading-font-size-s: 24px;
-  --heading-font-size-xs: 22px;
+  --heading-font-size-xxl: 2.8125rem; /* 45px */  
+  --heading-font-size-xl: 2.25rem; /* 36px */
+  --heading-font-size-l: 2rem; /* 32px */
+  --heading-font-size-m: 1.75rem; /* 28px */
+  --heading-font-size-s: 1.5rem; /* 24px */
+  --heading-font-size-xs: 1.375rem; /* 22px */
 
   /* nav height */
   --nav-height: 80px;
@@ -113,19 +123,6 @@
   --spacing-xs: 12px;
 }
 
-/* fallback fonts */
-@font-face {
-  font-family: roboto-condensed-fallback;
-  size-adjust: 88.82%;
-  src: local('Arial');
-}
-
-@font-face {
-  font-family: roboto-fallback;
-  size-adjust: 99.529%;
-  src: local('Arial');
-}
-
 *{
   font-family: var(--body-font-family);
 }
@@ -138,6 +135,12 @@
 
 .clearfix {
   display: inline-block;
+}
+
+html {
+ /* -webkit-font-smoothing: antialiased; */
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -185,7 +188,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0.8em;
+  margin-top: 0;
   margin-bottom: 0.25em;
   font-family: var(--heading-font-family);
   font-weight: 600;
@@ -198,11 +201,11 @@ h1 {
 }
 
 h2 {
-  font-size: var(--heading-font-size-xl);
+  font-size: var(--heading-font-size-l);
 }
 
 h3 {
-  font-size: var(--heading-font-size-l);
+  font-size: var(--heading-font-size-m);
 }
 
 h4 {
@@ -215,6 +218,7 @@ h5 {
 
 h6 {
   font-size: var(--heading-font-size-xs);
+  font-weight: 900;
 }
 
 p,
@@ -302,7 +306,7 @@ button.button {
   border: 2px solid transparent;
   border-radius: 2.4em;
   padding: 0.5em 1.2em;
-  font-family: var(--body-font-family);
+  
   font-style: normal;
   font-weight: 700;
   line-height: 1.25;
@@ -355,7 +359,7 @@ button.secondary:focus {
   margin: 12px 0;
   border-radius: 2.4em;
   padding: 0.5em 1.2em;
-  font-family: var(--body-font-family);
+  
   font-style: normal;
   font-weight: 700;
   line-height: 1.25;
@@ -557,10 +561,26 @@ main img {
 
 .light-scheme {
   color: var(--text-color);
+
+  .swiper-pagination-bullet {
+    background: rgba(0 0 0 / 50%);
+  }
+
+  .swiper-pagination-bullet-active {
+    background: var(--text-color);
+  }
 }
 
 .dark-scheme {
   color: var(--white);
+
+  .swiper-pagination-bullet {
+    background: rgba(255 255 255 / 50%);
+  }
+
+  .swiper-pagination-bullet-active {
+    background: var(--white);
+  }
 }
 
 .center {
@@ -683,6 +703,10 @@ main>.section:first-of-type {
     --grid-size: 6;
   }
 
+  &.gap-xxs {
+    --gap-spacing: var(--spacing-xxs);
+  }
+
   &.gap-xs {
     --gap-spacing: var(--spacing-xs);
   }
@@ -706,29 +730,15 @@ main>.section:first-of-type {
   &.gap-xxl {
     --gap-spacing: var(--spacing-xxl);
   }
-
-  &.spacing-xs {
-    --top-bottom-spacing: calc(var(--spacing-xs) * 2);
-  }
-
-  &.spacing-s {
-    --top-bottom-spacing: calc(var(--spacing-s) * 2);
-  }
-
-  &.spacing-m {
-    --top-bottom-spacing: calc(var(--spacing-m) * 2);
-  }
-
-  &.spacing-l {
-    --top-bottom-spacing: calc(var(--spacing-l) * 2);
-  }
-
-  &.spacing-xl {
-    --top-bottom-spacing: calc(var(--spacing-xl) * 2);
-  }
-
+/* all section spacing classes are set to l in Mobile */
+  &.spacing-xxs,
+  &.spacing-xs,
+  &.spacing-s,
+  &.spacing-m,
+  &.spacing-l,
+  &.spacing-xl,
   &.spacing-xxl {
-    --top-bottom-spacing: calc(var(--spacing-xxl) * 2);
+    --top-bottom-spacing: var(--spacing-l);
   }
 
   &.grid .block-content {
@@ -818,15 +828,6 @@ main .section.highlight {
   padding: 40px 0;
 }
 
-main .section.upi-steps-red-bg {
-  background: var(--gradient-upi-steps-red);
-  margin: 0;
-
-  h2, h3 {
-    color: var(--white);
-  }
-}
-
 /* when scheme is manually chosen from the section style */
 .section.dark-scheme {
   color: var(--white);
@@ -847,9 +848,10 @@ main .section.upi-steps-red-bg {
 }
 
 .section h2 + h3 {
-  font-size: 22px;
+  font-size: var(--body-font-size-m);
   font-weight: 400;
   line-height: normal;
+  margin-top: 0;
 }
 
 /* Category navbar is now part of header, so simpler styling */
@@ -898,129 +900,6 @@ body.is-framework-page .section.category-nav-section {
   visibility: visible !important;
   height: auto !important;
   overflow: visible !important;
-}
-
-.section.banner-image .default-content-wrapper ol {
-  display: flex;
-  align-items: center;
-  border-radius: 12px;
-  background: #F6F6F6 !important;
-  padding: 4px 13px;
-  font-size: 13px;
-  line-height: 16px;
-  color: #767676;
-}
-
-.section.banner-image .default-content-wrapper ol li {
-  list-style: none;
-  margin-right: 20px;
-}
-
-.section.banner-image .default-content-wrapper ol li a {
-  position: relative;
-  color: #767676;
-  pointer-events: none;
-}
-
-.section.banner-image .default-content-wrapper .button-container a {
-  background-color: #9B1E26;
-}
-
-.section.banner-image .default-content-wrapper ol li:nth-child(1) a {
-  color: var(--dark-red-color);
-  pointer-events: visible;
-}
-
-.section.banner-image .default-content-wrapper ol li:nth-child(2) a::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 3px;
-  left: -14px;
-  transform: rotate(44deg);
-  width: 6px;
-  height: 6px;
-  border: 2px solid currentcolor;
-  border-radius: 0 1px 0 0;
-  border-width: 3px 3px 0 0;
-  color: var(--dark-red-color);
-}
-
-.section.banner-image .default-content-wrapper {
-  width: 100%;
-  height: 580px;
-}
-
-.section.banner-image h1 {
-  position: absolute;
-  top: 9%;
-  color: var(--text-color);
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: -1.25px;
-}
-
-.section.banner-image h3 {
-  position: absolute;
-  top: 20%;
-  color: var(--text-color);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 28px;
-  letter-spacing: -0.562px;
-}
-
-.section.banner-image .default-content-wrapper .button-container {
-  position: absolute;
-  top: 26%;
-}
-
-
-.section.banner-image>div>p:nth-child(2) {
-  display: none;
-}
-
-.section.banner-image>div>p:nth-child(1) {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 580px;
-  object-fit: cover;
-}
-
-.section.banner-image .default-content-wrapper p img {
-  width: 100%;
-  height: 580px;
-}
-
-.section.rte-block-container {
-  padding: 80px 0;
-  background-color: var(--light-color);
-  margin: 0;
-}
-
-.section.faq-accordion-container h4 {
-  color: var(--text-color);
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 36px;
-  letter-spacing: -0.923px;
-  margin-bottom: 28px;
-}
-
-.section.highlight.hero-banner.banner-image.columns-container {
-  position: relative;
-
-  /* This is critical for absolute positioning */
-  width: 100%;
-  height: 580px;
-  padding: unset;
 }
 
 /* Base styles for sections with doodles */
@@ -1120,17 +999,24 @@ The height and width are set to 200 assuming the doodles won't be larger. */
 
   :root {
     /* body sizes */
-    --body-font-size-m: 18px;
-    --body-font-size-s: 16px;
-    --body-font-size-xs: 14px;
+    --body-font-size-xl: 1.375rem; /* 22px */
+    --body-font-size-l: 1.25rem; /* 20px */
+    --body-font-size-m: 1.125rem; /* 18px */
+    --body-font-size-s: 1rem; /* 16px */
+    --body-font-size-xs: 0.875rem; /* 14px */
+    --body-font-size-xxs: 0.75rem; /* 12px */
 
     /* heading sizes */
-    --heading-font-size-xxl: 45px;
-    --heading-font-size-xl: 36px;
-    --heading-font-size-l: 28px;
-    --heading-font-size-m: 22px;
-    --heading-font-size-s: 20px;
-    --heading-font-size-xs: 18px;
+    --heading-font-size-xxl: 3rem; /* 48px */
+    --heading-font-size-xl: 2.625rem; /* 42px */
+    --heading-font-size-l: 2.25rem; /* 36px */
+    --heading-font-size-m: 2rem; /* 32px */
+    --heading-font-size-s: 1.75rem; /* 28px */
+    --heading-font-size-xs: 1.5rem; /* 24px */
+  }
+
+  h2 {
+    font-size: var(--heading-font-size-xl);
   }
 
   main>.section>div {
@@ -1153,8 +1039,8 @@ The height and width are set to 200 assuming the doodles won't be larger. */
   main .breadcrumbs {
     display: inline-block;
     margin: 10px 40px 0;
-    padding: 4px 20px;
-    font-size: 12px;
+    padding: 6px 20px;
+    font-size: var(--body-font-size-xxs);
     font-family: var(--body-font-family-semibold);
     position: relative;
     z-index: 3;
@@ -1186,7 +1072,7 @@ The height and width are set to 200 assuming the doodles won't be larger. */
     text-transform: uppercase;
     letter-spacing: 0.3px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: var(--body-font-size-xxs);
   }
 
   main .breadcrumbs ol li a {
@@ -1229,13 +1115,33 @@ The height and width are set to 200 assuming the doodles won't be larger. */
       grid-template-columns: repeat(calc(var(--grid-size) / 2), 1fr);
     }
 
-    &.container.container-4 {
-      --section-container-width: calc(var(--grid-column-width) * 4);
+    &.spacing-xs {
+      --top-bottom-spacing: calc(var(--spacing-xs) * 2);
     }
+  
+    &.spacing-s {
+      --top-bottom-spacing: calc(var(--spacing-s) * 2);
+    }
+  
+    &.spacing-m {
+      --top-bottom-spacing: calc(var(--spacing-m) * 2);
+    }
+  
+    &.spacing-l {
+      --top-bottom-spacing: calc(var(--spacing-l) * 2);
+    }
+  
+    &.spacing-xl {
+      --top-bottom-spacing: calc(var(--spacing-xl) * 2);
+    }
+  
+    &.spacing-xxl {
+      --top-bottom-spacing: calc(var(--spacing-xxl) * 2);
+    }
+  }
 
-    &.container.container-6 {
-      --section-container-width: calc(var(--grid-column-width) * 6);
-    }
+  .section h2 + h3 {
+    font-size: var(--body-font-size-xl);
   }
 
   .section.banner-image>div>p:nth-child(1) {
@@ -1262,7 +1168,7 @@ The height and width are set to 200 assuming the doodles won't be larger. */
 
   .section.banner-image h1 {
     top: 1%;
-    font-size: 24px;
+    font-size: var(--heading-font-size-xs);
     font-weight: 600;
     letter-spacing: normal;
     font-style: normal;
@@ -1271,7 +1177,7 @@ The height and width are set to 200 assuming the doodles won't be larger. */
   }
 
   .section.banner-image h3 {
-    font-size: 14px;
+    font-size: var(--body-font-size-xs);
     font-weight: 300;
     line-height: 18px;
     letter-spacing: 1.3px;
@@ -1283,7 +1189,7 @@ The height and width are set to 200 assuming the doodles won't be larger. */
     position: absolute;
     top: 7%;
     text-align: center;
-    font-size: 16px;
+    font-size: var(--body-font-size-s);
     font-style: normal;
     font-weight: 600;
     line-height: 20px;
@@ -1298,7 +1204,7 @@ The height and width are set to 200 assuming the doodles won't be larger. */
   }
 
   .section.faq-accordion-container h4{
-    font-size: 20px;
+    font-size: var(--body-font-size-l);
   }
 
   .section.highlight.hero-banner.banner-image.columns-container {
