--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -502,10 +502,6 @@
   margin: 10px 0 0;
 }
 
-.hero-heritage-cc .hero-heritage-cc-banner-cta-group {
-  margin-top: 40px;
-}
-
 .hero-heritage-cc .hero-heritage-cc-banner {
   position: relative;
   width: 100%;
@@ -542,6 +538,7 @@
 .hero-heritage-cc-header-cta-fees-link .icon-arrow-right-white img {
   width: 24px;
   height: 24px;
+  opacity: 0.6;
 }
 
 /* Tablet: 600px and up */
@@ -564,9 +561,35 @@
 
 /* Desktop: 900px and up */
 @media (width >= 900px) {
-  .hero-heritage-cc-header-cta {
-    padding: 0 60px;
+
+  .hero-heritage-cc h1 {
+    font-size: var(--heading-font-size-m);
+    margin: var(--spacing-xs) 0;
   }
+
+  .hero-heritage-cc h2 {
+    font-size: var(--heading-font-size-m);
+  }
+
+  .hero-heritage-cc .hero-heritage-cc-banner-cta-group {
+    margin-top: 40px;
+  }
+  
+  .hero-heritage-cc-header-cta .hero-heritage-cc-header-cta-fees-link {
+    font-size: var(--body-font-size-s);
+  }
+
+  .hero-heritage-cc-banner-cta a.button {
+    font-size: var(--body-font-size-l);
+  }
+
+  .hero-heritage-cc-header-cta a.button.primary {
+    font-size: var(--body-font-size-s);
+}
+
+.hero-heritage-cc-banner-cta a.button.primary {
+  font-size: var(--body-font-size-xs);
+}
 
   .hero-heritage-cc-container {
     min-height: calc(100vh - 120px);
