--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1878,19 +1878,27 @@
 
   /* Experience Life & Reward Points - Desktop */
   .cards.experience-life .benefit-cards,
+  .cards.reward-points > .grid-cards > .cards-card,
+  .cards.reward-points > .swiper-wrapper > .cards-card,
   .cards.reward-points .benefit-cards {
     min-height: 400px;
   }
 
+  .cards.reward-points > .grid-cards > .cards-card .cards-card-image,
+  .cards.reward-points > .swiper-wrapper > .cards-card .cards-card-image,
   .cards.reward-points .benefit-cards .cards-card-image {
     padding: 64px 28px 20px;
   }
 
+  .cards.reward-points > .grid-cards > .cards-card .cards-card-body,
+  .cards.reward-points > .swiper-wrapper > .cards-card .cards-card-body,
   .cards.reward-points .benefit-cards .cards-card-body {
     padding: 0 28px 28px;
   }
 
   .cards.experience-life .benefit-cards .cards-card-tag,
+  .cards.reward-points > .grid-cards > .cards-card .cards-card-tag,
+  .cards.reward-points > .swiper-wrapper > .cards-card .cards-card-tag,
   .cards.reward-points .benefit-cards .cards-card-tag {
     padding: 0 28px;
   }
@@ -1904,17 +1912,23 @@
     font-size: 24px;
   }
 
+  .cards.reward-points > .grid-cards > .cards-card .cards-card-body h3,
+  .cards.reward-points > .swiper-wrapper > .cards-card .cards-card-body h3,
   .cards.reward-points .benefit-cards .cards-card-body h3 {
     font-size: 32px;
   }
 
   .cards.experience-life .benefit-cards .cards-card-body p:has(.icon-arrow-right-white),
+  .cards.reward-points > .grid-cards > .cards-card .cards-card-body p:has(.icon-arrow-right-white),
+  .cards.reward-points > .swiper-wrapper > .cards-card .cards-card-body p:has(.icon-arrow-right-white),
   .cards.reward-points .benefit-cards .cards-card-body p:has(.icon-arrow-right-white) {
     bottom: 10px;
     right: 30px;
   }
 
   .cards.experience-life .benefit-cards .cards-card-body .icon-arrow-right-white img,
+  .cards.reward-points > .grid-cards > .cards-card .cards-card-body .icon-arrow-right-white img,
+  .cards.reward-points > .swiper-wrapper > .cards-card .cards-card-body .icon-arrow-right-white img,
   .cards.reward-points .benefit-cards .cards-card-body .icon-arrow-right-white img {
     width: 40px;
     height: 40px;
